--- a/producto-service-dev.yml
+++ b/producto-service-dev.yml
@@ -1,2 +1,20 @@
 server:
   port: 9020
+
+spring:
+  data:
+    mongodb:
+      uri: mongodb://localhost:27017/
+  jpa:
+    databasePlatform:
+      hibernate:
+        ddl-auto: update
+      show-sql: true
+      properties:
+        hibernate:
+          format_sql: true
+          dialect: org.hibernate.dialect.PostgreSQLDialect
+  datasource:
+    url: jdbc:postgresql://localhost:5432/mitocode
+    username: postgres
+    password: 123456
