--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -8,7 +8,7 @@ spring:
   jpa:
     databasePlatform:
       hibernate:
-        ddl-auto: update
+        ddl-auto: create
       show-sql: true
       properties:
         hibernate:
