--- a/cloud-gateway-dev.yml
+++ b/cloud-gateway-dev.yml
@@ -14,4 +14,6 @@ spring:
           filters:
             - StripPrefix=2 # para que tome desde el segundo valor del Path
         - id: user-service-route
-          uri: lb://user-service
+          uri: lb://user-
+          predicates:
+            - Path=/api/user-service/**
