--- a/cloud-gateway-dev.yml
+++ b/cloud-gateway-dev.yml
@@ -18,3 +18,6 @@ spring:
           uri: lb://user-service
           predicates:
             - Path=/api/user-service/**
+          filters:
+            - StripPrefix=2
+            - UserServiceFilter=MitocodeValue,MitocodeKey
