--- a/client-service-ribbon-dev.yml
+++ b/client-service-ribbon-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 9010
 
 #Ribbon configuration
-service-id:
+product-service:
   ribbon:
     eureka: false
   listOfServers: localhost:9020, localhost:9021, localhost:9022
