--- a/client-service-openfeign-dev.yml
+++ b/client-service-openfeign-dev.yml
@@ -1,8 +1,25 @@
 server:
   port: 9010
+
+# Actuator Configuration
 management:
   endpoints:
     web:
       exposure:
         include: '*'
         base-path: /actuator # por si lo quiero reescribir
+
+# CircuitBreaker configuration
+resilience4j:
+  circuitbreaker:
+    configs:
+      cualquier-cosa:
+        slidingWindowSize: 15
+        failureRateThreshold: 20
+        waitDurationInOpenState: 20s
+        permittedNumberOfCallsInHalfOpenState: 8
+        slowCallDurationThreshold: 50ms
+        slowCallRateThreshold: 50
+    instances:
+      product-service-cb:
+        base-config: cualquier-cosa
