--- a/client-service-openfeign-dev.yml
+++ b/client-service-openfeign-dev.yml
@@ -1,13 +1,6 @@
 server:
   port: 9010
 
-# Actuator Configuration
-management:
-  endpoints:
-    web:
-      exposure:
-        include: '*'
-        base-path: /actuator # por si lo quiero reescribir
 
 # CircuitBreaker configuration
 resilience4j:
@@ -21,9 +14,20 @@ resilience4j:
         slowCallDurationThreshold: 50ms
         slowCallRateThreshold: 50
         automaticTransitionFromOpenToHalfOpenEnabled: true
+
+      user-service:
+        slidingWindowSize: 15
+        failureRateThreshold: 20
+        waitDurationInOpenState: 20s
+        permittedNumberOfCallsInHalfOpenState: 8
+        slowCallDurationThreshold: 50ms
+        slowCallRateThreshold: 50
+        automaticTransitionFromOpenToHalfOpenEnabled: true
     instances:
       product-service-cb:
         base-config: cualquier-cosa
+      user-service-cb:
+        base-config: user-service
   
   timelimiter:
     configs:
