--- a/cloud-gateway-keycloak-dev.yml
+++ b/cloud-gateway-keycloak-dev.yml
@@ -19,3 +19,15 @@ spring:
             - Path=/api/user-service/**
           filters:
             - StripPrefix=2
+security:
+  oauth2:
+    resourceserver:
+      jwt:
+        issuer-uri: http://localhost:8080/realms/mitocode-realm
+        jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+
+jwt:
+  auth:
+    converter:
+      resourceId: mitocode-keycloack-client
+      principalAttribute: preferred_username
