--- a/client-service-openfeign-dev.yml
+++ b/client-service-openfeign-dev.yml
@@ -36,3 +36,18 @@ resilience4j:
     instances:
       mitocode-product-tl:
         base-config: product-service-tl
+
+#Zipkin configuration
+management:
+  tracing:
+    sampling:
+      probability: 0.5
+
+#loggin configuration
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG # ALL, INFO, ERROR
+  pattern:
+    level: '%5p[${spring.application.name},%X{traceId:-},%X{spanId:-}]'
