--- a/product-service-dev.yml
+++ b/product-service-dev.yml
@@ -32,3 +32,8 @@ logging:
         web: ERROR # ALL, INFO, ERROR, DEBUG
   pattern:
     level: '%5p[${spring.application.name},%X{traceId:-},%X{spanId:-}]'
+
+springdoc:
+  api-docs:
+    path: /api-docs
+    enabled: true
